--- a/Analog Clock/index.html
+++ b/Analog Clock/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+   <header>&copy Ahmed Darwish</header>
     <div class="container">
         <div class="clock">
             <div class="numbers">
