--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -9,7 +9,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Todos</h1>
+    <h1>My Todos</h1>
+    <form id="form";>
+        <input type="text" id="input" class="input" placeholder="Add to your list">
+        <ul class="todos">
+            <li>
+               This is a Todo
+            </li>
+        </ul>
+    </form>
 
     
 </body>
