Finished the Todo project

--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -12,12 +12,14 @@
     <h1>My Todos</h1>
     <form id="form";>
         <input type="text" id="input" class="input" placeholder="Add to your list">
-        <ul class="todos">
-            <li>
-               This is a Todo
-            </li>
+        <ul class="todos" id="todos">
+    
         </ul>
     </form>
+    <small>
+        Click to mark as complete.
+         <br> Double Click to remove.
+    </small>
 
     
 </body>
