--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -1,3 +1,5 @@
+<!--Author: AHMED DARWISH-->>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,17 +11,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>My Todos</h1>
-    <form id="form";>
-        <input type="text" id="input" class="input" placeholder="Add to your list">
-        <ul class="todos" id="todos">
+    <h1>My Todos</h1>  <!--Heading-->
+    <form id="form";> <!-- form to get the todos from the user -->
+        <input type="text" id="input" class="input" placeholder="Add to your list"> <!--input text from the user-->
+        <ul class="todos" id="todos"> <!--List that is filled using user with javascript-->>
     
         </ul>
     </form>
     <small>
         Click to mark as complete.
-         <br> Double Click to remove.
+         <br> Double Click to remove. <br><br>
+         &copy; AHMED DARWISH
     </small>
+
 
     
 </body>
