--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -14,7 +14,7 @@
     <h1>My Todos</h1>  <!--Heading-->
     <form id="form";> <!-- form to get the todos from the user -->
         <input type="text" id="input" class="input" placeholder="Add to your list"> <!--input text from the user-->
-        <ul class="todos" id="todos"> <!--List that is filled using user with javascript-->>
+        <ul class="todos" id="todos"> <!--List that is filled using user with javascript-->
     
         </ul>
     </form>
